# test

./: .env.template  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 380b38864e9b_init.py  facc7e8e4b1f_drop_unique_api_url_in_env.py
app/: main.py
app/api/: dependencies.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: envs.py  feeds.py  job_search_service.py  products.py
app/core/: config.py
app/crud/: __init__.py  base.py  env.py  env_feed.py  feed.py  job_search_service.py
app/database/: base.py  initializer.py  session.py
app/models/: env.py  env_feed.py  feed.py  product.py
app/schemas/: __init__.py  env.py  env_feed.py  feed.py  job_search_service.py  product.py
docker/: Dockerfile
scripts/: start.sh
tests/: conftest.py  database.py
tests/crud/: test_product.py
tests/utils/: __init__.py  products.py
